# py-image-compress-mcp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYPI_RELEASE.md  README.md  README_zh.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
examples/: mcp_usage.py  modern_demo.py
scripts/: benchmark.py  mcp_e2e_test.py
src/py_image_compress_mcp/: __init__.py  __main__.py  compressor.py  config.py  exceptions.py  mcp_server.py
src/py_image_compress_mcp/core/: __init__.py  compression_engine.py  formats.py  image_info.py  optimizer.py  strategy.py
src/py_image_compress_mcp/engine/: __init__.py  batch.py  concurrent_executor.py  config.py
src/py_image_compress_mcp/models/: __init__.py  compression_config.py  compression_result.py  constants.py  image_metadata.py
src/py_image_compress_mcp/utils/: __init__.py  cleanup_helpers.py  file_helpers.py  logging_helpers.py  message_formatter.py  naming_helpers.py
tests/: conftest.py  test_core.py  test_integration.py  test_quality_handling.py
